force-app/main/default/objects/ApplicationChangeHistory__c/ApplicationChangeHistory__c.object-meta.xml
<CustomObject>
    <label>申請変更履歴</label>
    <nameField>
        <displayFormat>AC-{00000000}</displayFormat>
        <label>申請変更履歴名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>