force-app/main/default/objects/ApplicationChangeHistory__c/fields/ApplicationChangeHistoryId__c.field-meta.xml
<CustomField>
    <fullName>ApplicationChangeHistoryId__c</fullName>
    <externalId>true</externalId>
    <label>申請変更履歴ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>