force-app/main/default/objects/ApplicationChangeHistory__c/fields/Cancel__c.field-meta.xml
<CustomField>
    <fullName>Cancel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>解約</label>
    <referenceTo>Cancel__c</referenceTo>
    <relationshipName>ApplicationChangeHistoryCancelRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>