force-app/main/default/objects/ApplicationChangeHistory__c/fields/IsRemoteAccessEnable__c.field-meta.xml
<CustomField>
    <fullName>IsRemoteAccessEnable__c</fullName>
    <formula>NewApplication__r.Account__r.IsRemoteAccessEnable__c</formula>
    <label>在宅非表示フラグ</label>
    <type>Checkbox</type>
</CustomField>